--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <link rel="icon" href="image.jpg" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/js-confetti@latest/dist/js-confetti.browser.js"></script>
   <script src="main.js" defer></script>
-  <title>¿Me perdonas?</title>
+  <title>¿Vuelve al Real Madrid?</title>
 </head>
 
 <body>
   <main>
     <section class="sec_q">
-      <h1 class="question">¿Me perdonas?</h1>
-      <img class="image" src="image.jpg" alt="">
+      <h1 class="question">¿Vuelve al Real Madrid?</h1>
+      <img class="image" src="bensema.jpg" alt="">
     </section>
     <section class="sec_r">
       <button class="btn si" role="button">SI</button>
